Teknobarn 2016 first commits

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,133 +2,4 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body{
-  text-align: center;
-  font-family: helvetica, arial;
-  background-color: #1F1F1F;
-  color: #BBB;
-  text-shadow: 1px 1px 1px #000;
-  font-size:20px;
-}
-
-#header{
-  width:100%;
-  font-size: 30px;
-  padding-bottom: 30px;
-  img{
-    height: 100px;
-  }
-}
-
-#rsvp{
-  display: inline-block;
-  line-height: 2em;
-  width:100%;
-  input[type=submit]{
-    padding: 10px 20px 10px;
-    background-color: #B65201;
-    border:none;
-    color: #BBB;
-    text-shadow: 1px 1px 0px black;
-    font-weight: bold;
-    font-size:20px;
-    &:hover{
-      background-color: #A44A01;
-    }
-  }
-  .submit_rsvp{
-    display:none;
-  }
-  #about_link a{
-    color:#B65201;
-  }
-}
-
-#details{
- padding:0px 100px;
- font-size:20px;
-}
-
-.center{
-  text-align: center;
-}
-
-.left{
-  text-align: left;
-  display: inline-block;
-}
-
-.orange{
-  color:#B65201;
-}
-
-
-input[type="radio"] {
-    display:none;
-}
-input[type="radio"] + label {
-    font-family:Arial, sans-serif;
-}
-input[type="radio"] + label span {
-    display:inline-block;
-    width:19px;
-    height:19px;
-    margin:-1px 14px 0 0;
-    vertical-align:middle;
-    cursor:pointer;
-    -moz-border-radius:  50%;
-    border-radius:  50%;
-}
-
-input[type="radio"] + label span {
-     background-color:#BBB;
-}
-
-input[type="radio"]:checked + label span{
-     background-color:#B65201;
-}
-
-
-@media only screen and (max-device-width: 480px) {
-  #header{
-    font-size:60px;
-    img{
-      height: auto;
-      width: 100%;
-    }
-  }
-
-  #details{
-    padding:0px 10px;
-    font-size:40px;
-  }
-
-  #rsvp{
-    font-size:40px;
-    input[type=submit]{
-      width: 33%;
-      font-size:40px;
-      text-shadow:none;
-    }
-  }
-
-  input[type="radio"] + label span {
-    width:38px;
-    height:38px;
-  }
-}
-
-.users{
-  padding:20px;
-  text-align:left;ew
-  li{
-    list-style: none;
-  }
-  tr:hover{
-    background-color: #888;
-    cursor: pointer;
-  }
-  td,th{
-    padding-right:40px;
-  }
-}
+body{}
