--- a/app/views/users/rsvp.html.erb
+++ b/app/views/users/rsvp.html.erb
@@ -1,7 +1,7 @@
 <div id='header'>
-  <%= image_tag 'teknobarn_one_line.png' %>
+  <%= image_tag 'goat_redemption_blue.png' %>
   <br>
-  Aug 21-23, 2015
+  Jul 29-31, 2015
   <br>
   Leesport, PA
 </div>
