--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,53 +1,1 @@
-body{
-	text-align: center;
-	font-family: Helvetica,Arial;
-	background-color: black;
-	div{
-		width: 100%;
-	}
-	div#background{
-		background-image: image_url('bg.jpg');
-		width: 100%;
-		position: fixed;
-		height:100%;
-		background-position: center;
-	}
-	#yearofthegoat{
-		font-size: 50px;
-		font-weight: bold;
-	}
-	#events{
-		padding-top: 20px;
-		font-size: 40px;
-		text-shadow: 1px 1px 1px black;
-		#date{
-			font-size: 160px;
-			text-shadow: 2px 2px 1px black;
-		}
-		#events-list{
-			padding-top: 40px;
-			line-height: 50px;
-		}
-
-	}
-	#end-pic{
-		background-image: image_url('teknobarn_pic.jpg');
-		width:100%;
-	}
-	.hero{
-		width: 100%;
-		img{
-			width:80%;
-		}
-	}
-}
-
-.blueish{
-	color:#30405E;
-}
-.lighterblueish{
-	color:#35507C;
-}
-.redish{
-	color:#9C3F54;
-}
+body{}
