--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,72 +1,1 @@
-<div id='background'
-	data-3000='top:0%;opacity:1'
-	data-5000='opacity:0'>
-</div>
-<div id='yearofthegoat' 
-	data-129='display:none' 
-	data-130='display:block;top:195px'
-	data-700='opacity:0'
-	data-800='opacity:1'
-	data-1200='opacity:1'
-	data-1400='opacity:0'>
-	<span class='redish'>#</span><span class='blueish'>yearofthegoat</span>
-</div>
-<div id='logo' 
-	data-0='top:0px' 
-	data-130='top:-130px;opacity:1' 
-	data-800='opacity:0'>
-	<%= image_tag 'teknobarn_one_line.png' %>
-	<br>
-	<%= image_tag 'goat_mixed.png' %>
-</div>
-<div id='events'
-	data-1400='opacity:0'
-	data-1700='opacity:1'
-	data-2400='top:0%'
-	data-3000='top:-100%'>
-	<span id='date' class='blueish'>8<span class='redish'>&middot</span>21<span class='redish'>&middot</span>15</span>
-	<div id='events-list' class='redish'
-		data-1900='opacity:0'
-		data-2100='opacity:1'>
-		Fireworks <span class='blueish'>&middot</span> Civil War Pong <span class='blueish'>&middot</span> Bonfire 
-		<br>
-		Tubing <span class='blueish'>&middot</span> Slip 'n' Flip <span class='blueish'>&middot</span> BBQ
-		<br>
-		Goats <span class='blueish'>&middot</span> Quoits <span class='blueish'>&middot</span> Jello Shots
-		<br>
-		Slap Cup <span class='blueish'>&middot</span> Ahoy <span class='blueish'>&middot</span> Ming
-		<br>
-		Battleship <span class='blueish'>&middot</span> Santa <span class='blueish'>&middot</span> Camping
-		<br>
-		Rage
-	</div>
-</div>
-<div class='hero'
-	data-5000='opacity:0'
-	data-5500='opacity:1;top:50px'
-	data-7000='opacity:0'>
-	<%= image_tag 'pong3.gif' %>
-</div>
-<div class='hero'
-	data-6500='opacity:0'
-	data-7000='opacity:1;top:50px'
-	data-8000='opacity:0'>
-	<%= image_tag 'group.jpg' %>
-</div>
-
-<% (1..7).each do |i| %>
-	<div class='hero'
-		data-<%=6500+(1500*i)%>='opacity:0'
-		data-<%=7000+(1500*i)%>='opacity:1;top:50px'
-		data-<%=8000+(1500*i)%>='opacity:0'>
-		<%= image_tag "hero_#{i}.jpg" %>
-	</div>
-<%end %>
-
-<div class='hero'
-	data-<%=6500+(1500*8)%>='opacity:0'
-	data-<%=7000+(1500*8)%>='opacity:1;top:50px'>
-	<%= image_tag "hero_8.jpg" %>
-</div>
-
-<%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js" %>
+<h1> TEST TEKNOBARN SITE </h1>
