--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,10 @@
-<h1> TEST TEKNOBARN SITE </h1>
+<style>
+body{
+	background-color: rgba(0,0,0,0.9);
+	text-align: center;
+	img{
+		width:75%;
+	}
+}
+</style>
+<%= image_tag 'goat_redemption_blue.png' %>
