Index page background opacity

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,13 @@
 <style>
 body{
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgba(0,0,0,0.87);
   text-align: center;
 }
 #logo{
   max-width: 924px;
   width:75%;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 #date{
   max-width: 833px;
