--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= user.rsvp %></td>
         <td><%= user.clicked_invite %></td>
         <td>
-          <%= link_to edit_user_path(user.id) do %>
+          <%= link_to edit_user_path(user) do %>
             <span class='glyphicon glyphicon-pencil'></span>
           <% end %>
         </td>
