--- a/app/views/users/rsvp.html.erb
+++ b/app/views/users/rsvp.html.erb
@@ -3,7 +3,8 @@
     <%= image_tag 'goat_redemption_blue_light_no_year.png', id: 'rsvp_header_img'%>
     <h3>
       Jul 29-31, 2015<br>
-      Leesport, PA
+      Leesport, PA<br><br>
+      RSVP for: <%= @user.full_name %>
     </h3>
   </div>
   <div id='rsvp' class='col-sm-6 col-sm-offset-3'>
