--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,4 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body{}
+body{
+  .owl-carousel .item img{
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+}
