--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,35 +1,37 @@
-<%= image_tag 'teknobarn_one_line.png' %>
-<h1>Friday, Aug 21st - Sunday, Aug 23rd</h1>
-<br>
-<h1>Teknobarn is located at:
-<br>
-135 Gernants Church Rd
-<br>
-Leesport, PA 19533
-</h1>
-<br>
+<div class="container-fluid">
+  <%= image_tag 'goat_redemption_blue_light_no_year.png' %>
+  <h1>Friday, July 29th - Sunday, July 30th</h1>
+  <br>
+  <h1>Teknobarn is located at:
+  <br>
+  135 Gernants Church Rd
+  <br>
+  Leesport, PA 19533
+  </h1>
+  <br>
 
-<h2>
-Events include (but are not limited to):
-<ul>
-  <li>Civil War pong in a Civil War-era barn</li>
-  <li>Drunk tubing down the Schuylkill River</li>
-  <li>Quoits tournament</li>
-  <li>Giant Slip 'n' Flip</li>
-  <li>Bonfire</li>
-  <li>Fireworks</li>
-  <li>BBQ-ing various species of animals</li>
-  <li>Volleyball</li>
-  <li>Pong Tournamnet</li>
-  <li>Goats</li>
-  <li>General debauchery</li>
-</ul>
-</h2>
+  <h2>
+    Civil War pong in a Civil War-era barn<br>
+    Schuylkill River Tubing<br>
+    Pong tournament<br>
+    Giant Slip 'n' Flip<br>
+    Bubble Soccer<br>
+    Bonfire<br>
+    Volleyball<br>
+    Tekno<br>
+  </h2>
 
-<h2 id='description'>
-Teknobarn is THE premiere food/alcohol/music festival in Leesport, PA.  Ok perhaps it's not quite a 'festival' yet... but we're getting there!  Join an all star cast of partiers for a madness-filled weekend in the farmlands of Pennsylvania.  Experience the Year of the Goat like it's meant to be... with an all-you-can-eat, all-you-can-drink, no holds barred adventure where your only concern will be not getting lost in the corn field.  If you're not persuaded by the above list, ask someone who has been there before, it is truly a magical place.  And don't worry, the cows are long gone, so you don't have to worry about being run over by stampeding cattle... and yes, we have electricity and indoor plumbing and (gasp!) even wifi.  
-<br>
-<br>
-Think you can hang?  Check out the pics below and sign up from your invite!
-</h2>
-<blockquote class="imgur-embed-pub" lang="en" data-id="a/hGigH"><a href="//imgur.com/a/hGigH">Teknobarn 2k14</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+  <h2>
+    <br>
+    <br>
+    Catering Provided By<br>
+    <a href="http://gourmandpa.com/">Gourmand Food Truck</a>
+    <br>
+    <br>
+  </h2>
+
+  <h2 id='description'>
+
+  </h2>
+  <%= render partial: "images" %>
+</div>
