--- a/app/views/users/confirm.html.erb
+++ b/app/views/users/confirm.html.erb
@@ -24,7 +24,7 @@
       Welcome to the madness!
     </h4>
     <h4>
-      To confirm your spot, please remit payment via Venmo to Andrew Weist (@aweist) in the amount of <span style='color:#337ab7'>$85</span>. You're registration is not confirmed until payment is received, and we will very likely run out of room this year, so please do this ASAP.
+      To confirm your spot, please remit payment via Venmo to Andrew Weist (@aweist) in the amount of <span style='color:#337ab7'>$85</span>. Your registration is not confirmed until payment is received, and we will very likely run out of room this year, so please do this ASAP.
     </h4>
     <h4>
       If Venmo absolutely isn't an option for you, please let him know (andrew.weist@gmail.com), and you can arrange an alternative form of payment.
