Styling, adding venmo username

--- a/app/views/users/success.html.erb
+++ b/app/views/users/success.html.erb
@@ -9,13 +9,16 @@
     </h1>
   </div>
   <div class='row'>
-    <h2>
+    <h3>
       Your RSVP and shirt size have been recorded.<br>
-      Please don't forget to pay $85 via Venmo.<br>
-      Your spot isn't reserved until you do so!
-    </h2>
+      Please don't forget to pay <span style='color:#337ab7'>$85</span> via Venmo.<br>
+      Your spot isn't reserved until you do so!<br>
+      Venmo Username aweist
+    </h3>
   </div>
   <div class='row'>
-    <a class='btn btn-primary btn-lg' href="https://venmo.com/?txn=pay&audience=private&recipients=aweist&amount=85&note=Teknobarn%202K16%20from%20<%=@user.first_name%>">PAY VIA VENMO</a>
+    <a class='btn btn-primary btn-lg' target="_blank" href="https://venmo.com/?txn=pay&audience=private&recipients=aweist&amount=85&note=Teknobarn%202K16%20from%20<%=@user.first_name%>">PAY VIA VENMO</a>
+    <br>
+    <br>
   </div>
 </div>
