--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -13,6 +13,7 @@
  *= require sweetalert2
  *= require owl.carousel
  *= require owl.theme
+ *= require bootstrap-sortable
  */
 
 @import "bootstrap-sprockets"
