--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 
   <h1>All users</h1>
 
-  <table class="table table-striped users text-left sortable" cellspacing=0 cellpadding = 0>
+  <table class="table table-striped users text-left sortable table-hover" cellspacing=0 cellpadding = 0>
     <thead>
       <tr>
         <th>ID</th>
