--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,6 +10,7 @@
         <th>Name</th>
         <th>Email</th>
         <th>RSVP</th>
+        <th>Size</th>
         <th>Clicked</th>
         <th>Updated</th>
         <th></th>
@@ -23,6 +24,7 @@
         <td><%= user.full_name %></td>
         <td><%= user.email %></td>
         <td><%= user.rsvp %></td>
+        <td><%= user.shirt_size %></td>
         <td><%= user.clicked_invite %></td>
         <td><%= user.updated_at %></td>
         <td>
