--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,7 +24,7 @@
         <td><%= user.full_name %></td>
         <td><%= user.email %></td>
         <td><%= user.rsvp %></td>
-        <td><%= user.shirt_size %></td>
+        <td><%= user.size %></td>
         <td><%= user.clicked_invite %></td>
         <td><%= user.updated_at %></td>
         <td>
